fix: [UI] bad wrapping css on the address page

--- a/frontend/src/app/components/address/address.component.scss
+++ b/frontend/src/app/components/address/address.component.scss
@@ -133,3 +133,51 @@ h1 {
   padding-bottom: 0;
   font-size: 0.8rem;
 }
+
+.wrap-cell {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  cursor: pointer;
+  position: relative; 
+  vertical-align: middle;
+}
+
+.main-amount {
+  font-weight: 600;
+  color: #ffffff;
+}
+
+.fiat {
+  height: 0;
+  overflow: visible;
+  display: block;
+  
+  opacity: 0;
+  visibility: hidden;
+  
+  transition: opacity 0.2s ease-in-out, transform 0.2s ease-in-out;
+  transform: translateY(-5px);
+  
+  background-color: #11131f; 
+  border-radius: 4px;
+  padding: 2px 8px;
+  font-size: 15px;
+  font-weight: 700;
+  white-space: nowrap;
+  
+  z-index: 100;
+}
+
+.fiat::before {
+  content: "FIAT VALUE: ~";
+  opacity: 0.7;
+  font-size: 12px;
+  margin-right: 4px;
+}
+
+.wrap-cell:hover .fiat {
+  opacity: 1;
+  visibility: visible;
+  transform: translateY(4px); 
+}
